# gdbstub

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  guidelines.agent.txt.deleteme  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml  lints.yml  stable-ci.yml
docs/: LICENSE-MIT  transition_guide.md
example_no_std/: .gitignore  Cargo.toml  README.md  check_size.sh  dump_asm.sh
example_no_std/src/: conn.rs  gdb.rs  main.rs  print_str.rs
examples/armv4t/: README.md  emu.rs  gdb.rs  main.rs  mem_sniffer.rs
examples/armv4t/gdb/: agent.rs  auxv.rs  breakpoints.rs  catch_syscalls.rs  exec_file.rs  extended_mode.rs  flash.rs  host_io.rs  libraries.rs  lldb_register_info_override.rs  memory_map.rs  mod.rs  monitor_cmd.rs  register_info_override.rs  section_offsets.rs  target_description_xml_override.rs  tracepoints.rs
examples/armv4t/test_bin/: .gdbinit  test.c  test.elf  test.ld
examples/armv4t_multicore/: README.md  emu.rs  gdb.rs  main.rs  mem_sniffer.rs
examples/armv4t_multicore/test_bin/: .gdbinit  .gitignore  compile_test.sh  test.c  test.elf
gdbstub_arch/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
gdbstub_arch/src/: lib.rs
gdbstub_arch/src/aarch64/: core.xml  fpu.xml  mod.rs  sysregs.xml
gdbstub_arch/src/aarch64/reg/: aarch64_core.rs  id.rs  mod.rs
gdbstub_arch/src/arm/: mod.rs
gdbstub_arch/src/arm/reg/: arm_core.rs  id.rs
gdbstub_arch/src/mips/: mod.rs
gdbstub_arch/src/mips/reg/: id.rs  mips.rs
gdbstub_arch/src/msp430/: mod.rs
gdbstub_arch/src/msp430/reg/: id.rs  msp430.rs
gdbstub_arch/src/ppc/: mod.rs
gdbstub_arch/src/ppc/reg/: common.rs
gdbstub_arch/src/riscv/: mod.rs
gdbstub_arch/src/riscv/reg/: id.rs  riscv.rs
gdbstub_arch/src/wasm/: addr.rs  mod.rs
gdbstub_arch/src/wasm/reg/: id.rs  mod.rs  wasm_regs.rs
gdbstub_arch/src/x86/: mod.rs
gdbstub_arch/src/x86/reg/: core32.rs  core64.rs  id.rs  mod.rs
gdbstub_test/: Cargo.toml
gdbstub_test/macros/: Cargo.toml
gdbstub_test/macros/src/: lib.rs
gdbstub_test/src/: client.rs  lib.rs  process.rs
gdbstub_tests/: Cargo.toml
gdbstub_tests/src/: lib.rs
scripts/: check_target_delegation.sh  ci.sh  run_coverage.sh  test_dead_code_elim.sh
src/: arch.rs  arch_traits.rs  commands.rs  common.rs  error.rs  lib.rs  opt_result_impl.rs  stub.rs  support.rs  target.rs
src/agent/: mod.rs
src/arch/: mod.rs  traits.rs
src/arch/arm/: mod.rs
src/arch/arm/reg/: arm_core.rs  id.rs  mod.rs
src/arch/mips/: mod.rs
src/arch/mips/reg/: id.rs  mips.rs  mips64.rs  mod.rs
src/arch/msp430/: mod.rs
src/arch/msp430/reg/: id.rs  mod.rs  msp430.rs
src/arch/ppc/: mod.rs
src/arch/ppc/reg/: common.rs  core32.rs  id.rs  mod.rs  vector.rs
src/arch/riscv/: mod.rs
src/arch/riscv/reg/: id.rs  mod.rs  riscv.rs
src/arch/x86/: mod.rs
src/arch/x86/reg/: amd64_core.rs  core32.rs  core64.rs  id.rs  mod.rs
src/commands/: q_supported.rs
src/common/: mod.rs  signal.rs
src/conn/: mod.rs
src/conn/impls/: boxed.rs  mod.rs  tcpstream.rs  unixstream.rs
src/connection/: mod.rs
src/connection/impls/: boxed.rs  mod.rs  tcpstream.rs  unixstream.rs
src/connection_impls/: mod.rs  tcpstream.rs
src/gdbstub/: mod.rs
src/gdbstub_impl/: builder.rs  error.rs  mod.rs  target_result_ext.rs
src/gdbstub_impl/ext/: agent.rs  auxv.rs  base.rs  breakpoints.rs  catch_syscalls.rs  exec_file.rs  extended_mode.rs  host_io.rs  memory_map.rs  mod.rs  monitor_cmd.rs  reverse_exec.rs  section_offsets.rs  single_register_access.rs  x_upcase_packet.rs
src/internal/: be_bytes.rs  dead_code_marker.rs  le_bytes.rs  maybe_unimpl.rs  mod.rs
src/protocol/: commands.rs  console_output.rs  mod.rs  packet.rs  recv_packet.rs  response_writer.rs
src/protocol/commands/: _D.rs  _H.rs  _M.rs  _QAgent.rs  _QCatchSyscalls.rs  _QDisableRandomization.rs  _QEnableErrorStrings.rs  _QEnvironmentHexEncoded.rs  _QEnvironmentReset.rs  _QEnvironmentUnset.rs  _QSetWorkingDir.rs  _QStartNoAckMode.rs  _QStartupWithShell.rs  _QTBuffer.rs  _QTDP.rs  _QTDPsrc.rs  _QTFrame.rs  _QTStart.rs  _QTStop.rs  _QTinit.rs  _bc.rs  _bs.rs  _c.rs  _d_upcase.rs  _g.rs  _g_upcase.rs  _h_upcase.rs  _k.rs  _m.rs  _m_upcase.rs  _p.rs  _p_upcase.rs  _qAttached.rs  _qC.rs  _qHostInfo.rs  _qOffsets.rs  _qProcessInfo.rs  _qRcmd.rs  _qRegisterInfo.rs  _qSupported.rs  (+48 more)
src/protocol/common/: hex.rs  hexdecoder.rs  lists.rs  mod.rs  qxfer.rs  thread_id.rs
src/stub/: builder.rs  core_impl.rs  error.rs  mod.rs  run.rs  state_machine.rs  stop_reason.rs  target_result_ext.rs
src/stub/core_impl/: auxv.rs  base.rs  breakpoints.rs  catch_syscalls.rs  exec_file.rs  extended_mode.rs  flash.rs  host_info.rs  host_io.rs  host_process_info.rs  info_response.rs  libraries.rs  lldb_error_strings.rs  lldb_register_info.rs  memory_map.rs  monitor_cmd.rs  no_ack_mode.rs  process_info.rs  register_info.rs  resume.rs  reverse_exec.rs  section_offsets.rs  single_register_access.rs  target_xml.rs  thread_extra_info.rs  tracepoints.rs  wasm.rs  x_lowcase_packet.rs  x_upcase_packet.rs
src/stub/ext/: auxv.rs  base.rs  extended_mode.rs  host_io.rs  memory_map.rs  mod.rs
src/target_ext/: breakpoints.rs  extended_mode.rs  mod.rs  section_offsets.rs
src/target_ext/base/: multithread.rs  singlethread.rs
src/util/: be_bytes.rs  dead_code_marker.rs  hexdecoder.rs  hexiter.rs  managed.rs  managed_vec.rs  mod.rs  no_panic_iter.rs  slicevec.rs
