[package]
name = "gdbstub_arch"
description = "Implementations of `gdbstub::arch::Arch` for various architectures."
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
version = "0.1.0"
license = "MIT"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/gdbstub_arch"
homepage = "https://github.com/daniel5151/gdbstub"
repository  = "https://github.com/daniel5151/gdbstub"
keywords = ["gdb", "emulation", "no_std", "debugging"]
categories = ["development-tools::debugging", "embedded", "emulators", "no-std"]

[dependencies]
gdbstub = { path = "../", version = "0.5", default-features = false }

num-traits = { version = "0.2", default-features = false }
